# ron

docs/proposal/: proposal.odt
ron_basic_viz/: package.xml  setup.cfg  setup.py
ron_basic_viz/ron_basic_viz/: primitive_generators.py  ron_viz.py  ron_viz_window.py
ron_common/: CMakeLists.txt  README.md  package.xml
ron_common/include/ron_common/: ron_node_node.hpp  ros_node_utilities.hpp
ron_common/src/: ron_node_node.cpp
ron_controllers/: CMakeLists.txt  README.md  package.xml
ron_controllers/include/ron_controllers/: bridge_node_controller.hpp
ron_controllers/src/: bridge_node_controller.cpp
ron_description/: CMakeLists.txt  README.md  package.xml
ron_description/config/: controller_manager.yaml  diff_drive_controller.yaml  dummy.yaml  example.rviz  robot_node_controller_manager.yaml  sandbox.yaml
ron_description/launch/: robot_node_bringup.launch.py  sandbox.launch.py  sim.launch.py
ron_description/models/: robot_node.sdf
ron_description/src/: ron_configuration.cpp
ron_description/urdf/: dummy.urdf.xacro  robot_node.ros2_control.xacro  robot_node.urdf.xacro  robot_node_description.urdf.xacro  ron.ros2_control.xacro
ron_interfaces/: CMakeLists.txt  README.md  package.xml
ron_interfaces/msg/: BridgeNodeConfiguration.msg  BridgeNodeTelemetry.msg  RobotNodeConfiguration.msg  RobotNodeTelemetry.msg
ron_interfaces/srv/: AddOrRemoveBridgeNodeParent.srv  SetBridgeNodeHost.srv
ron_tf/: CMakeLists.txt  README.md  package.xml
ron_tf/include/ron_tf/: bridge_node_tf_broadcaster.hpp  robot_node_tf_broadcaster.hpp  ron_node_tf_broadcaster_i.hpp
ron_tf/src/: bridge_node_tf_broadcaster.cpp  robot_node_tf_broadcaster.cpp  ron_node_tf_broadcaster_i.cpp
